Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2670

Concurrent tagging of message with trace id while message is delivered from another queue causes segfault

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.5, 0.6
    • 0.7
    • C++ Broker
    • None

    Description

      Federation routes that annotate a message with a trace id can cause segfaults
      if that message is concurrently delivered from another queue.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: